--- a/css/style.css
+++ b/css/style.css
@@ -20,22 +20,19 @@
 
 body {
   background: linear-gradient(90deg, rgb(169, 207, 83), rgb(34, 139, 34));
-  min-width: 500px;
+  min-width: 300px;
 }
 
 header {
-  width: 80%;
-  height: 60px;
-  margin: 0 10%;
+  width: 100%;
+  margin: 0;
 }
 
 .top {
   width: 100%;
   height: 70px;
   line-height: 40px;
-  margin: 2% 0;
   background: linear-gradient(45deg, rgba(5, 171, 212, 0.8), rgba(128, 16, 219, 0.8));
-  border-radius: 20px;
   padding: 15px 30px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
@@ -44,14 +41,17 @@ header {
   color: #fff;
   font-family: KaiTi;
   font-size: 40px;
+  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
 }
 .top a {
   padding: 0 10px;
-  color: #000;
+  color: #DA70D6;
   font-family: Microsoft YaHei;
   font-size: 20px;
   border-radius: 10px;
   font-weight: bold;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
 }
 .top a:hover {
   color: #ff5050;
@@ -68,22 +68,150 @@ header {
 }
 
 .nav {
+  margin: 1% 0 0 0;
   width: 100%;
-  border-radius: 20px;
-  background: linear-gradient(45deg, rgba(16, 138, 219, 0.8), rgba(5, 164, 212, 0.8));
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-  padding: 15px 30px;
+  height: 60px;
+  padding: 15px 20%;
+  display: inline-flex;
+  justify-content: space-evenly;
 }
 .nav a {
   padding: 0 10px;
-  color: #000;
-  font-family: Microsoft YaHei;
-  font-size: 20px;
-  border-radius: 10px;
-  font-weight: bold;
+  font-family: STXingKai;
+  font-size: 25px;
+  color: #3a3a3a;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+  font-weight: normal;
 }
 .nav a:hover {
-  color: #ff5050;
-  background-color: rgba(255, 255, 255, 0.2509803922);
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.6);
+  color: #F8D800;
+  text-decoration: underline;
+  transition: 0.5s;
+}
+
+section {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.banner {
+  min-height: 616px;
+  background-image: url(../img/banner.jpg);
+  background-size: 100% 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  text-align: center;
+  max-width: 40%;
+}
+
+.title h1 {
+  margin: 5% 0;
+  line-height: 1;
+  font-size: 50px;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  line-height: 1.5;
+  letter-spacing: 10px;
+}
+.title h2 {
+  margin: 5% 0;
+  margin-bottom: 20%;
+  font-size: 20px;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5px;
+  font-weight: normal;
+}
+
+.btn {
+  color: #fff;
+  border-color: #fff;
+  font-family: Montserrat, sans-serif;
+  border-radius: 30px;
+  border-width: 1px;
+  padding: 14px 40px;
+  border: 1px solid #dadada;
+  transition: 0.5s;
+}
+.btn:hover {
+  color: #fff;
+  border-color: #66ab36;
+  background: #66ab36;
+}
+
+.blurb {
+  background: rgb(241, 187, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5% 0;
+}
+.blurb h3 {
+  margin-top: 10%;
+}
+.blurb h3 a {
+  font-size: 30px;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  transition: 0.5s;
+  font-weight: normal;
+}
+.blurb h3 a:hover {
+  color: #3a3a3a;
+}
+.blurb1 {
+  width: 33.3333333333%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.blurb2 {
+  width: 33.3333333333%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.blurb3 {
+  width: 33.3333333333%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #fff;
+  background: #222222;
+  padding: 2% 0;
+}
+.footer h1 {
+  font-size: 40px;
+  font-family: KaiTi;
+}
+
+.link a {
+  margin: 0 3px;
+  color: #fff;
+}
+.link a:hover {
+  color: #66ab36;
+}
+
+.copyright a {
+  color: #fff;
+}
+.copyright a:hover {
+  color: #66ab36;
 }
